# MPC_ddpg

./: .dir-locals.el  AmeCommunication.py  Makefile  README.md  main.py  nohup.out  pyproject.toml  requirements.txt
checkpoints/agent_down/: agent_down_ep_1001.pth.tar  agent_down_ep_101.pth.tar  agent_down_ep_11.pth.tar  agent_down_ep_1301.pth.tar
checkpoints/agent_in3/: agent_in3_ep_1001.pth.tar  agent_in3_ep_101.pth.tar  agent_in3_ep_11.pth.tar  agent_in3_ep_1301.pth.tar
checkpoints/agent_up/: agent_up_ep_1001.pth.tar  agent_up_ep_101.pth.tar  agent_up_ep_11.pth.tar  agent_up_ep_1301.pth.tar
data/: last_output_dis_target.data  last_output_velocity_target.csv  last_output_velocity_target.data  output1.csv  output2.csv  output3.csv
misc/: Appli_Example.py  dynamic_plot.py
misc/win64_vc140/: binding_amecommunication.exp
notes/: notes.org  notes.tex
src/: AmeCommunication.py  ddpg.py  env.py  helpers.py  main_window.py  mpc.py
src/amesim_python_api/: Appli_Example.py  activate  activate.bat  binding_amecommunication.c
src/win64_vc140/: binding_amecommunication.lib
