[tool.pyright]
include = ["src"]

[project]
name = "mpc-ddpg"
description="MP Control integration with DDPG reinforcement learning technique"
readme = "README.md"
version = "1.0.0"
dependencies = [
"cvxpy==1.3.2",
"gymnasium",
"matplotlib",
"numpy==1.25.0",
"scipy==1.11.2",
"torch==2.0.1",
"utils==1.0.1",
"pandas",
]
